# clinical-notes-risk-stratification

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: metadata.json
docs/: onepager.md
notebooks/: 01_eda.ipynb
src/clinical_notes_rs/: data.py  model.py
