[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-notes-risk-stratification"
version = "0.1.0"
description = "Structured + clinical-note NLP pipeline for readmission risk stratification"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "jupyter"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
